--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,35 +6,33 @@
 .shape-heart {
     clip-path: polygon(50% 0%, 90% 20%, 100% 50%, 50% 100%, 0% 50%, 10% 20%);
 }
-
 .shape-cross {
     clip-path: polygon(30% 0%, 70% 0%, 70% 30%, 100% 30%, 100% 70%, 70% 70%, 70% 100%, 30% 100%, 30% 70%, 0% 70%, 0% 30%, 30% 30%);
 }
-
 .shape-diamond {
     clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
 }
-
 .shape-octagon {
     clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
 }
 
-/* Trix Editor Styling */
-.trix-content {
-    min-height: 12rem;
-    border-color: #d1d5db;
-    border-radius: 0.375rem;
-    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-    padding: 0.75rem;
+/* QuillJS Editor Styling */
+#editor-container {
+    border: 1px solid #d1d5db; /* border-gray-300 */
+    border-radius: 0.375rem; /* rounded-md */
+    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05); /* shadow-sm */
 }
-.trix-content:focus-within {
-    --tw-ring-color: #4f46e5;
-    --tw-border-opacity: 1;
-    border-color: #6366f1;
-    box-shadow: 0 0 0 1px #6366f1;
-}
-trix-toolbar .trix-button-group {
+#editor-container .ql-toolbar {
     border-top-left-radius: 0.375rem;
     border-top-right-radius: 0.375rem;
-    border-bottom: 1px solid #d1d5db;
+    border-bottom: 1px solid #d1d5db !important;
+}
+#editor-container .ql-container {
+    border-bottom-left-radius: 0.375rem;
+    border-bottom-right-radius: 0.375rem;
+    min-height: 12rem;
+}
+#editor-container:focus-within {
+    border-color: #6366f1; /* border-indigo-500 */
+    box-shadow: 0 0 0 1px #6366f1;
 }
